Issue #SB-15472 Course Dashboard: User count is overlapping with portal footer

--- a/src/app/client/src/assets/styles/global.scss
+++ b/src/app/client/src/assets/styles/global.scss
@@ -29,7 +29,6 @@ body {
 @include respond-above (lg){
   body{
     .footer-fix {
-      min-height: calc(100vh - 168px);
       padding-bottom: $base-block-space * 7;
     }
   }
@@ -37,7 +36,6 @@ body {
 @include respond-between (md, lg){
   body{
     .footer-fix {
-      min-height: calc(100vh - 168px);
       padding-bottom: $base-block-space * 8;
     }
   }
@@ -45,7 +43,6 @@ body {
 @include respond-between (sm, md){
   body{
     .footer-fix {
-      min-height: calc(100vh - 168px);
       padding-bottom: $base-block-space * 14;
     }
   }
